--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -99,3 +99,26 @@ nav li a{
 .banner-content{
     max-width: 580px;
 } 
+
+/* main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+/* about style */
+
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+} 
+
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+
+.item-description{
+    font-weight: bold;
+}
