--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,6 +17,9 @@
     color:#FD6E0A;
 }
 
+.text-center{
+    text-align: center;
+}
 .dark-2{
     color: #474747;
 }
@@ -105,6 +108,10 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 /* about style */
 
 .about{
@@ -121,4 +128,37 @@ main{
 
 .item-description{
     font-weight: bold;
+}
+
+/* skill section */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+/* Resume section styles */
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+
+.experience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.experience-description, .experience-sub-title{
+    color: #757575;
+}
+.resume hr{
+    margin: 30px 5px;
+}
+
+.resume-download-cv{
+    margin-top: 50px;
 }
